syntax = "proto3";

option go_package = "/leases";

package leases;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";


service LeaseService {
    rpc GetLease(GetLeaseRequest) returns (GetLeaseResponse) {}
    rpc GetAllLeases(google.protobuf.Empty) returns (GetAllLeasesResponse) {}
    rpc CreateLease(CreateLeaseRequest) returns (CreateLeaseResponse) {}
}

message GetLeaseRequest {
    string client_id = 1;
    string key = 2;
    string namespace = 3;
}

message GetLeaseResponse {
    string fencing_token = 1;
    string client_id = 2;
    string key = 3;
    string namespace = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp expires_at = 6;
}

message CreateLeaseRequest {
    string client_id = 1;
    string key = 2;
    string namespace = 3;
    google.protobuf.Timestamp expires_at = 4;
}

message CreateLeaseResponse {
    string fencing_token = 1;
    string client_id = 2;
    string key = 3;
    string namespace = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp expires_at = 6;
}

message GetAllLeasesResponse {
    repeated GetLeaseResponse leases = 1;
}